<resources>
    <string name="app_name">WebControl</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_change_pass_verify">ChangePassVerifyActivity</string>
    <string name="title_activity_settings">Configuraciones</string>
    <string name="label_id">ID</string>
    <string name="label_last_name">Apellidos</string>
    <string name="label_first_name">Nombres</string>
    <string name="label_cellphone">Celular</string>
    <string name="label_button_signup">Registrar</string>
    <string name="label_cod_verify">Código de verificación</string>
    <string name="label_button_changepass_verify">Siguiente</string>
    <string name="label_button_changepass_verify_save">Cambiar contraseña</string>
    <string name="title_sign_up">Registrar</string>
    <string name="server_side_error">No se pudo registrar usuario</string>
    <string name="without_internet">No hay conexión a Internet intente esta operación mas tarde</string>
    <string name="terms_agree">Declaro que he leído y acepto los términos y condiciones.</string>
    <string name="contentTerms">Ver términos y condiciones <![CDATA[<a href="https://webcontrol.webcontrol.cl/manuales/WebControl_Acuerdo_Uso.asp">aqui</a>]]>.</string>
    <string name="title_activity_enable_finger_print">Asociar huella digital</string>
    <string name="label_email_address">Dirección de correo electrónico</string>
    <string name="invalid_picture">Una foto es requerida</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="title_activity_onboarding_permission">OnboardingPermission</string>
    <string name="remember_username">Recordar Id</string>
    <string name="title_activity_change_password">WebControl App</string>
    <string name="hello_blank_fragment">Asistencia</string>
    <string name="forgot_my_password_text">Olvide mi contraseña</string>
    <string name="new_password_text">Nueva contraseña</string>
    <string name="helper">¿Necesita ayuda con su contraseña?</string>
    <string name="helperChange">Cambiar Contraseña</string>
    <string name="helperComent">Ingrese el Id que utiliza en WebControl App y le ayudaremos a crear una nueva contraseña</string>
    <string name="helperCod">Hemos enviado un código de verificación a su correo registrado, ingrese a continuación su nueva contraseña y su código de verificación</string>
    <string name="pref_header_cliente">Cliente</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_header_finger">Configurar acceso con huella</string>
    <string name="button_preferences">button_preferences</string>
    <string name="empty_list">No hay elementos que mostrar</string>
    <string name="no_fingerprint_enrolled">Sin huella digital configurada. Registre al menos una huella digital en la configuración de su dispositivo</string>
    <string name="success_fingerprint">Ahora puede iniciar sesión\n utilizando su huella digital.</string>
    <string name="buttonOk">Aceptar</string>
    <string name="buttonCancel">Cancelar</string>
    <string name="confirm_fingerprint">Confirmar su huella digital ahora</string>
    <string name="dialog_fingerprint_title">Huella digital para WebControl</string>
    <string name="dialog_fingerprint_subtitle">Inicie sesión con su huella digital</string>
    <string name="fingerprint_failed">Huella digital no reconocida. Intentélo de nuevo.</string>
    <string name="fingerprint_success">Huella digital reconocida</string>
    <string name="regex_rut">\\d{1,2}\\.*\\d{3}\\.*\\d{3}[\\-]*[0-9kK]{1}</string>
    <string name="regex_cellphone">\\d{9}</string>
    <string name="regex_email">^(.+)@(.+)$</string>
    <string name="message_registered">Se ha registrado correctamente, sus datos serán verificados y se le notificara a su correo electrónico</string>
    <string name="action_delete">Delete</string>
    <string name="msj_cambio_telefono">Ingrese el nuevo número telefónico y su contraseña actual</string>
    <string name="msj_cambio_telefono_confirm">Se envió un código de confirmación al teléfono + %1$s %2$s</string>
    <string name="msj_cambio_email_confirm">Se envió un código de confirmación al correo %1$s </string>
    <string name="desea_actualizar_su_n_mero_telef_nico">¿Desea actualizar su número telefónico?</string>
    <string name="volver">Volver</string>
    <string name="nuevo_tel_fono">Nuevo teléfono</string>
    <string name="c_digo_de_verificaci_n">Código de verificación</string>
    <string name="reenviar_codigo">Reenviar código</string>
    <string name="nuevo_correo_electr_nico">Nuevo correo electrónico</string>
    <string name="desea_actualizar_su_correo_electr_nico">¿Desea actualizar su correo electrónico?</string>
    <string name="msj_confirm_email">Ingrese el nuevo correo electrónico y su contraseña actual</string>
    <string name="destinos_prompt">Seleccione un destino</string>
    <string-array name="destinos_arrays">
        <item>In</item>
        <item>OUT</item>
    </string-array>
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>
    <string name="title_activity_geofence">GeofenceActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_point_control">Puntos de Control</string>
    <string name="mensaje_coronavirus_edad">Usted se encuentra dentro de la población de riesgo para COVID-19, para asegurar su bienestar, se encuentra restringido su ingreso al Proyecto según DS 010-2020 TR / RM 139-2020 MINSA</string>
    <string name="mensaje_coronavirus_antecedentes">Usted se encuentra dentro de la población de riesgo para COVID-19 y deberá seguir las instrucciones del DS 010-2020 TR / RM 139-2020 MINSA con su empleador.</string>
    <string name="reason_coronavirus_test">Bloqueado por: RESPUESTA POSITIVA EN ENCUESTA CORONAVIRUS</string>
    <string name="reason_coronavirus_edad">Bloqueado por: ESTAR EN GRUPO DE RIESGO</string>
    <string name="credential_title">CREDENCIAL PERSONAL</string>
    <string name="credential_title1">CREDENCIAL VIRTUAL</string>
    <string name="credential_subtitle1">CURSOS</string>
    <string name="credential_subtitle">AUTORIZACIONES</string>
    <string name="credential_worker_type">TRABAJADOR EXTERNO</string>
    <string name="credential_note_ks">Mantener su licencia vigente renovando su vencimiento. Comunicar inmediatamente
        al departamento de prevención de riesgos la fecha de renovación de la licencia y del examen psicosensotécnico.
        La autorización queda nula al vencer la fecha de la licencia.</string>
    <string name="credential_note_bambas"> Mantener su licencia vigente renovando su vencimiento.</string>
    <string name="credential_text_suspension">Será motivo de suspensión:</string>
    <string name="credential_text_suspension_m1">- Uso indebido de Credencial</string>
    <string name="credential_text_suspension_m2">- Expiración de Vigencia</string>
    <string name="credential_text_suspension_m3">- Falta a las Normas Internas</string>
    <string name="credential_title_quellaveco">Datos del conductor /Operador</string>
    <string name="empresa">EMPRESA</string>
    <string name="area">AREA</string>
    <string name="puesto">PUESTO</string>
    <string name="dospuntos">:</string>
    <string name="autorizado_conducir">AUTORIZADO A CONDUCIR</string>
    <string name="fecha_expedicion">FECHA DE EXPEDICIÓN</string>
    <string name="fecha_vencimiento">FECHA DE VENCIMIENTO</string>
    <string name="licencia_interna">Licencia Interna de</string>
    <string name="conductor_operador">Conductor / Operador (Lico)</string>
    <string name="autorizacion_conduccion">AUTORIZACION DE CONDUCCION PARA:</string>
    <string name="licencia_mtc">DATOS DE LA LICENCIA DEL MTC</string>
    <string name="N_licencia">N° DE LICENCIA</string>
    <string name="clase_categoria">CLASE Y CATEGORIA</string>
    <string name="fecha_revalidacion">FECHA DE REVALIDACION</string>
    <string name="restricciones">RESTRICCIONES</string>
    <string name="vigencia_documentos">VIGENCIA DE DOCUMENTOS</string>
    <string name="vigencia_documentos_accesos">VIGENCIA DE DOCUMENTOS\nACCESOS</string>
    <string name="vigencia_documentos_conductor">VIGENCIA DE DOCUMENTOS\nCONDUCTOR</string>
    <string name="vehiculo_equipos">TIPO DE VEHICULO</string>
    <string name="room_status">ESTADO: </string>
    <string name="permissions_needed">Para continuar se necesita permiso de Cámara y Micrófono.</string>
    <string name="test_title">TEST TITLE</string>
    <string name="empty_data_title">Sin Registros</string>
    <string name="text_finish_test_btn">Finalizar</string>
    <string name="text_time_test">12:45 pm</string>
    <string name="text_date_test">13-05-2020</string>
    <string name="content_time_icon">Time icon</string>
    <string name="content_date_icon">Date icon</string>
    <string name="text_num_rows">3</string>
    <string name="trpe_agregar_btn_txt">AGREGAR</string>
    <string name="campo_obligatorio">Todos los campos son obligatorios</string>
    <string name="test_covid_title_qv">Reporte de Síntomas y Contactos</string>
    <string name="test_covid_title_anta">Declaraciones Juradas</string>
    <string name="mensajeQr">Coloque el codigo QR en el recuadro para escanear</string>
    <string name="valueQr">Resultado Scanner QR</string>
    <string name="link_competencia_atras">ATRAS</string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="finalizar">FINALIZAR</string>
    <string name="continuar">CONTINUAR</string>
    <string name="atencion_titulo">ATENCION!</string>
    <string name="Mensaje_test_vehiculo">Realice un test de vehiculo primero.</string>
    <string name="credential_doc_mtc_txt">LICENCIA DE CONDUCIR MTC</string>
    <string name="credential_doc_cfs_txt">CURSO DE FATIGA Y SOMNOLENCIA</string>
    <string name="credential_doc_emdt_txt">EVAL. MANEJO DEFENSIVO TEÓRICO</string>
    <string name="procesar_own_doc_fragment">PROCESAR</string>
    <string name="documento_update_doc_fragment">Documento</string>
    <string name="seleccione_documento_update_fragment">Seleccione documento</string>
    <string name="subir_archivo_update_doc_fragment">Subir archivo</string>
    <string name="take_pic_front_update_doc_fragment">Tomar foto delante</string>
    <string name="take_pic_back_update_doc_fragment">Tomar foto atras</string>
</resources>