<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/layout_header">
        <TextView
            android:id="@+id/lblTestTitle"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/test_title"
            android:textColor="@color/active_indicator"
            android:textSize="23sp"
            android:typeface="normal"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/lblTestNumRows"/>

        <TextView
            android:id="@+id/lblTestNumRows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_num_rows"
            android:textColor="@color/active_indicator"
            android:typeface="normal"
            android:textSize="16sp"
            android:layout_marginBottom="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/lblTestTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/lbl_test_fecha"/>

        <ImageView
            android:id="@+id/img_test_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/lblTestNumRows"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/ic_menu_my_calendar"
            android:contentDescription="@string/content_date_icon" />

        <TextView
            android:id="@+id/lbl_test_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_date_test"
            android:textColor="@color/active_indicator"
            android:layout_marginBottom="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/lblTestNumRows"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_test_fecha" />

        <ImageView
            android:id="@+id/img_test_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/lblTestNumRows"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/lbl_test_hora"
            app:srcCompat="@drawable/ic_access_time_white_24dp"
            android:contentDescription="@string/content_time_icon" />

        <TextView
            android:id="@+id/lbl_test_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time_test"
            android:textColor="@color/active_indicator"
            android:layout_marginEnd="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_small"
            app:layout_constraintTop_toBottomOf="@id/lblTestNumRows"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/test_detail_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" />

    <LinearLayout
        android:id="@+id/container_finish_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/test_btn_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            android:layout_marginVertical="@dimen/margin_small"
            android:paddingVertical="16dp"
            android:text="@string/text_finish_test_btn"/>

    </LinearLayout>

</LinearLayout>