<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <TextView
            style="@style/credential_modal_doc_titles"
            android:id="@+id/lblMtcDoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/credential_doc_mtc_txt"/>
        <TextView
            style="@style/credential_modal_doc_values"
            android:id="@+id/lblMtcDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblMtcDoc"
            tools:text="Vencimiento: 31-12-2021"/>
        <TextView
            style="@style/credential_modal_doc_titles"
            android:id="@+id/lblCFSDoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credential_doc_cfs_txt"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblMtcDate" />
        <TextView
            style="@style/credential_modal_doc_values"
            android:id="@+id/lblCFSDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblCFSDoc"
            tools:text="Vencimiento: 31-12-2021"/>
        <TextView
            style="@style/credential_modal_doc_titles"
            android:id="@+id/lblEMDTDoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credential_doc_emdt_txt"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblCFSDate" />
        <TextView
            style="@style/credential_modal_doc_values"
            android:id="@+id/lblEMDTDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblEMDTDoc"
            tools:text="Vencimiento: 31-12-2021"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>